realtime status chat updated with socket.io/socket.io-client + bring to chat on job detail message (click)
