# apps/backend/user-service/src/routes/v1/routes.ts
@@ -245,20 +245,10 @@ const models: TsoaRoute.Models = {
             "googleSub": {"dataType":"string"},
             "facebookSub": {"dataType":"string"},
             "username": {"dataType":"string"},
-            "email": {"dataType":"string"},
-            "phone_number": {"dataType":"string"},
             "profile": {"dataType":"string"},
-            "role": {"dataType":"string"},
             "gender": {"dataType":"string"},
             "age": {"dataType":"double"},
-            "favorites": {"dataType":"array","array":{"dataType":"refAlias","ref":"mongoose.Types.ObjectId"}},
-            "createdAt": {"dataType":"datetime"},
-            "updatedAt": {"dataType":"datetime"},
-            "lastActive": {"dataType":"datetime"},
-            "lastSeen": {"dataType":"datetime"},
-            "sessions": {"dataType":"array","array":{"dataType":"nestedObjectLiteral","nestedProperties":{"lastLogin":{"dataType":"datetime","required":true},"ipAddress":{"dataType":"string","required":true},"deviceId":{"dataType":"string","required":true}}}},
-            "privacySettings": {"dataType":"nestedObjectLiteral","nestedProperties":{"profilePhotoVisibleTo":{"dataType":"union","subSchemas":[{"dataType":"enum","enums":["everyone"]},{"dataType":"enum","enums":["contacts"]},{"dataType":"enum","enums":["nobody"]}],"required":true},"lastSeenVisibleTo":{"dataType":"union","subSchemas":[{"dataType":"enum","enums":["everyone"]},{"dataType":"enum","enums":["contacts"]},{"dataType":"enum","enums":["nobody"]}],"required":true}}},
-            "contacts": {"dataType":"union","subSchemas":[{"dataType":"array","array":{"dataType":"refAlias","ref":"mongoose.Types.ObjectId"}},{"dataType":"array","array":{"dataType":"string"}}]},
+            "role": {"dataType":"string"},
         },
         "additionalProperties": false,
     },
